* Resolving Android Lint errors and warnnings.    Note: Because of using GridLayout minSdkVersion changed to 14.    Later we could use android-support-v7-gridlayout project to    change back minSdkVersion to 11. refs #6 Level nine and release version two.